# cosmic-applet-trash

./: ARCHITECTURE.md  Cargo.toml  README.md  justfile
data/: com.github.thiagocys.CosmicAppletTrash.desktop  com.github.thiagocys.CosmicAppletTrash.metainfo.xml
i18n/en/: cosmic_applet_trash.ftl
src/: app.rs  config.rs  dbus_file_manager.rs  file_manager.rs  lib.rs  main.rs  mime_icon.rs  trash_item_metadata.rs  trash_operations.rs  trash_status.rs  ui_items.rs  ui_panel_button.rs  ui_popup.rs
